# omnirss

./: .gitignore  Cargo.toml  Dockerfile  README.md  cypress.config.js  cypress.json  netlify.toml  package.json  render.yaml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  cypress.yml  devskim.yml  sentry-release.yml  test.yml
cypress/e2e/: search_results.cy.js
cypress/integration/: home_page.spec.js  search_results.spec.js  searching.spec.js
fixtures/rss/: joe_rogan_show.rss
fixtures/spotify/: joe_rogan_show.json  search_joe.json
functions/search/: go.mod  go.sum  handler.go  main.go  response.go  template.html
functions/spotify-rss/: go.mod  go.sum  handler.go  main.go
infra/: main.tf
netlify/functions/search/: config.go  go.mod  go.sum  handler.go  main.go  response.go  template.html
netlify/functions/spotify-rss/: go.mod  handler.go  main.go
omnirss/: cypress.config.ts  index.html  package.json
omnirss/cypress/e2e/: home_page.cy.js
omnirss/public/: robots.txt
omnirss/public/assets/bootstrap/css/: bootstrap.min.css
omnirss/src/: App.svelte
omnirss/src/lib/: Features.svelte  Footer.svelte  Header.svelte  Navbar.svelte  Showcase.svelte
public/: index.html
public/assets/js/: clipboard.js
src/: cache.rs  error.rs  lib.rs  main.rs  routes.rs  search_query.rs  server_start.rs  settings.rs
src/cache/: memory.rs  mod.rs  redis.rs
src/response/: mod.rs  search_result.rs
src/spotify/: cache.rs  client.rs  credentials.rs  mock.rs  mod.rs  rss.rs  service.rs  token.rs
src/spotify/response/: get_show.rs  get_show_fixture.rs  get_token.rs  mod.rs  search.rs  search_fixture.rs
templates/: index.html.tera  search-results.html.tera
tests/: show_to_rss.rs
