[package]
name = "omnirss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Error Handling
thiserror = "1.0.30"

# HTTP Server
rocket = "0.5.0-rc.1"

# HTTP Requests
reqwest = { version = "0.11", features = ["json"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"

# Deserialization
serde = "1.0.135"
serde_derive = "1.0.135"
serde_json = "1.0"

# RSS
rss = { version = "2.0", features = ["default", "validation"] }

# Time
chrono = "0.4"

# Base64
base64 = "0.13.0"

# Logging
log = "0.4"
pretty_env_logger = "0.3"
