[package]
name = "omnirss"
version = "0.1.0"
edition = "2021"

[lib]
name = "omnirss"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]

# Error Handling
thiserror = "1.0.30"

# HTTP Server
rocket = "0.5.0-rc.1"

# HTTP Requests
reqwest = { version = "0.11", features = ["json"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"

# Deserialization
serde = "1.0.138"
serde_derive = "1.0.136"
serde_json = "1.0"

# RSS
rss = { version = "2.0", features = ["default"] }

# Time
chrono = "0.4"

# Base64
base64 = "0.13.0"

# Logging
tracing = "0.1.32"
tracing-appender = "0.2.2"
tracing-subscriber = {version="0.3.10", features=["env-filter", "json", "registry", "smallvec"]}

# Redis
redis = { version = "0.21.5", default-features = false, features = ["tokio-comp", "tokio-native-tls-comp"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
