[package]
name = "omnirss"
version = "0.2.0"
edition = "2021"

[lib]
name = "omnirss"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]

# Error Handling
thiserror = "1.0.35"

# HTTP Server
rocket = { version = "0.5.0-rc.2", default-features = false }
rocket_dyn_templates = { version = "0.1.0-rc.2", default-features = false, features = ["tera"] }

# HTTP Requests
reqwest = { version = "0.11", features = ["json"] }

# Async
futures = "0.3.24"

# Deserialization
serde = { version = "1.0.138", default-features = false }
serde_derive = "1.0.144"
serde_json = "1.0"

# RSS
rss = { version = "2.0", default-features = false, features = ["builders"] }

# Time
chrono = { version = "0.4", default-features = false }

# Base64
base64 = "0.13.0"

# Logging
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-subscriber = {version="0.3.15", features=["env-filter", "json", "registry", "smallvec"]}

# Redis
redis = { version = "0.21.6", default-features = false, features = ["tokio-comp", "tokio-native-tls-comp"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros"] }
